; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_sh2soc.c_sh2_peripheral_read16.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_sh2soc.c_sh2_peripheral_read16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@EL_32XP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"peri r16 [%08x]     %04x @%06x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sh2_peripheral_read16(i32 %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %4, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to i8*
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %5, align 8
  %12 = load i32, i32* %3, align 4
  %13 = and i32 %12, 511
  store i32 %13, i32* %3, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sdiv i32 %15, 2
  %17 = xor i32 %16, 1
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %14, i64 %18
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %6, align 4
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %22 = load i32, i32* @EL_32XP, align 4
  %23 = load i32, i32* %3, align 4
  %24 = or i32 %23, -512
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %27 = call i32 @sh2_pc(%struct.TYPE_5__* %26)
  %28 = call i32 @elprintf_sh2(%struct.TYPE_5__* %21, i32 %22, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %25, i32 %27)
  %29 = load i32, i32* %6, align 4
  ret i32 %29
}

declare dso_local i32 @elprintf_sh2(%struct.TYPE_5__*, i32, i8*, i32, i32, i32) #1

declare dso_local i32 @sh2_pc(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
